문제 양식 정리

--- a/kakao_190907/1.md
+++ b/kakao_190907/1.md
@@ -1,4 +1,4 @@
-문제 설명
+## 문제 설명<br/>
 데이터 처리 전문가가 되고 싶은 어피치는 문자열을 압축하는 방법에 대해 공부를 하고 있습니다. 최근에 대량의 데이터 처리를 위한 간단한 비손실 압축 방법에 대해 공부를 하고 있는데, 문자열에서 같은 값이 연속해서 나타나는 것을 그 문자의 개수와 반복되는 값으로 표현하여 더 짧은 문자열로 줄여서 표현하는 알고리즘을 공부하고 있습니다.
 간단한 예로 aabbaccc의 경우 2a2ba3c(문자가 반복되지 않아 한번만 나타난 경우 1은 생략함)와 같이 표현할 수 있는데, 이러한 방식은 반복되는 문자가 적은 경우 압축률이 낮다는 단점이 있습니다. 예를 들면, abcabcdede와 같은 문자열은 전혀 압축되지 않습니다. 어피치는 이러한 단점을 해결하기 위해 문자열을 1개 이상의 단위로 잘라서 압축하여 더 짧은 문자열로 표현할 수 있는지 방법을 찾아보려고 합니다.
 
@@ -8,17 +8,21 @@
 
 압축할 문자열 s가 매개변수로 주어질 때, 위에 설명한 방법으로 1개 이상 단위로 문자열을 잘라 압축하여 표현한 문자열 중 가장 짧은 것의 길이를 return 하도록 solution 함수를 완성해주세요.
 
-제한사항
+## 제한사항
 s의 길이는 1 이상 1,000 이하입니다.
 s는 알파벳 소문자로만 이루어져 있습니다.
-입출력 예
-s	result
-"aabbaccc"	7
-"ababcdcdababcdcd"	9
-"abcabcdede"	8
-"abcabcabcabcdededededede"	14
-"xababcdcdababcdcd"	17
-입출력 예에 대한 설명
+
+### 입출력 예
+
+s	result<br/>
+"aabbaccc"	7<br/>
+"ababcdcdababcdcd"	9<br/>
+"abcabcdede"	8<br/>
+"abcabcabcabcdededededede"	14<br/>
+"xababcdcdababcdcd"	17<br/>
+
+### 입출력 예에 대한 설명
+
 입출력 예 #1
 
 문자열을 1개 단위로 잘라 압축했을 때 가장 짧습니다.
@@ -33,10 +37,10 @@ s	result
 
 입출력 예 #4
 
-문자열을 2개 단위로 자르면 abcabcabcabc6de 가 됩니다.
-문자열을 3개 단위로 자르면 4abcdededededede 가 됩니다.
-문자열을 4개 단위로 자르면 abcabcabcabc3dede 가 됩니다.
-문자열을 6개 단위로 자를 경우 2abcabc2dedede가 되며, 이때의 길이가 14로 가장 짧습니다.
+문자열을 2개 단위로 자르면 abcabcabcabc6de 가 됩니다.<br/>
+문자열을 3개 단위로 자르면 4abcdededededede 가 됩니다.<br/>
+문자열을 4개 단위로 자르면 abcabcabcabc3dede 가 됩니다.<br/>
+문자열을 6개 단위로 자를 경우 2abcabc2dedede가 되며, 이때의 길이가 14로 가장 짧습니다.<br/>
 
 입출력 예 #5
 
