--- a/kakao_190907/3.md
+++ b/kakao_190907/3.md
@@ -1,4 +1,4 @@
-문제 설명
+## 문제 설명
 고고학자인 튜브는 고대 유적지에서 보물과 유적이 가득할 것으로 추정되는 비밀의 문을 발견하였습니다. 그런데 문을 열려고 살펴보니 특이한 형태의 자물쇠로 잠겨 있었고 문 앞에는 특이한 형태의 열쇠와 함께 자물쇠를 푸는 방법에 대해 다음과 같이 설명해 주는 종이가 발견되었습니다.
 
 잠겨있는 자물쇠는 격자 한 칸의 크기가 1 x 1인 N x N 크기의 정사각 격자 형태이고 특이한 모양의 열쇠는 M x M 크기인 정사각 격자 형태로 되어 있습니다.
@@ -7,16 +7,17 @@
 
 열쇠를 나타내는 2차원 배열 key와 자물쇠를 나타내는 2차원 배열 lock이 매개변수로 주어질 때, 열쇠로 자물쇠를 열수 있으면 true를, 열 수 없으면 false를 return 하도록 solution 함수를 완성해주세요.
 
-제한사항
-key는 M x M(3 ≤ M ≤ 20, M은 자연수)크기 2차원 배열입니다.
-lock은 N x N(3 ≤ N ≤ 20, N은 자연수)크기 2차원 배열입니다.
-M은 항상 N 이하입니다.
-key와 lock의 원소는 0 또는 1로 이루어져 있습니다.
-0은 홈 부분, 1은 돌기 부분을 나타냅니다.
-입출력 예
-key	lock	result
-[[0, 0, 0], [1, 0, 0], [0, 1, 1]]	[[1, 1, 1], [1, 1, 0], [1, 0, 1]]	true
-입출력 예에 대한 설명
+## 제한사항
+key는 M x M(3 ≤ M ≤ 20, M은 자연수)크기 2차원 배열입니다.<br/>
+lock은 N x N(3 ≤ N ≤ 20, N은 자연수)크기 2차원 배열입니다.<br/>
+M은 항상 N 이하입니다.<br/>
+key와 lock의 원소는 0 또는 1로 이루어져 있습니다.<br/>
+0은 홈 부분, 1은 돌기 부분을 나타냅니다.<br/>
+### 입출력 예
+key	lock	result<br/>
+[[0, 0, 0], [1, 0, 0], [0, 1, 1]]	<br/>[[1, 1, 1], [1, 1, 0], [1, 0, 1]]	<br/>true
+
+### 입출력 예에 대한 설명
 
 ![3.jpg](/assets/3.jpg)
 
